--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,7 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bookBackground">#303F9F</color>
+    <color name="musicBackground">#ff5722</color>
+    <color name="movieBackground">#ff1744</color>
 </resources>
