--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -77,7 +77,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v4.view.ViewPager
+    <com.skywalker.idouban.ui.base.FixedViewPager
         android:id="@+id/main_viewPager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
