--- a/app/src/main/res/layout/recommend.xml
+++ b/app/src/main/res/layout/recommend.xml
@@ -3,7 +3,7 @@
     <android.support.v7.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="100dp">
+        android:layout_height="match_parent">
         <RelativeLayout
             android:orientation="horizontal"
             android:layout_width="match_parent"
@@ -25,6 +25,6 @@
                 android:id="@+id/recycler_list"
                 android:layout_width="match_parent"
                 android:layout_below="@id/tv_more"
-                android:layout_height="70dp"/>
+                android:layout_height="match_parent"/>
         </RelativeLayout>
     </android.support.v7.widget.CardView>
