--- a/app/src/main/res/layout/tag_movie.xml
+++ b/app/src/main/res/layout/tag_movie.xml
@@ -2,7 +2,7 @@
 <TextView xmlns:android="http://schemas.android.com/apk/res/android"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
-          android:background="@drawable/tag_background"
-          android:text="Helloworld">
+          android:textColor="@android:color/white"
+          android:background="@drawable/movie_tag_background">
 
 </TextView>
