--- a/app/src/main/res/layout/layout_test.xml
+++ b/app/src/main/res/layout/layout_test.xml
@@ -2,7 +2,7 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:fitsSystemWindows="true"
-    android:background="@color/movieBackground"
+    android:background="@color/movie_colorPrimary"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
