--- a/app/src/main/res/layout/test.xml
+++ b/app/src/main/res/layout/test.xml
@@ -6,20 +6,25 @@
     android:layout_height="50dp">
     <TextView
         android:text="123"
-        android:background="@color/movieBackground"
+        android:background="@color/movie_colorPrimary"
         android:layout_margin="10dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:text="123"
-        android:background="@color/movieBackground"
+        android:background="@color/movie_colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
     <TextView
         android:text="123"
-        android:background="@color/movieBackground"
+        android:background="@color/movie_colorPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:overScrollMode="ifContentScrolls"
+
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></android.support.v4.widget.SwipeRefreshLayout>
 </LinearLayout>
