--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,15 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
-    <color name="bookBackground">#303F9F</color>
-    <color name="musicBackground">#ff5722</color>
-    <color name="movieBackground">#ff1744</color>
+
+
+    <color name="book_colorPrimary">#2196F3</color>
+    <color name="book_colorPrimaryDark">#1976D2</color>
+
+    <color name="music_colorPrimary">#FF5722</color>
+    <color name="music_colorPrimaryDark">#E64A19</color>
+
+    <color name="movie_colorPrimary">#E91E63</color>
+    <color name="movie_colorPrimaryDark">#C2185B</color>
+
 </resources>
